@@ -31,6 +31,7 @@ import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Date;
@@ -94,8 +95,7 @@ public class FileUtil {
             e.printStackTrace();
         } finally {
             try {
-                if (fileWriter != null)
-                    fileWriter.close();
+                if (fileWriter != null) fileWriter.close();
             } catch (IOException e) {
                 e.printStackTrace();
             }
@@ -260,8 +260,7 @@ public class FileUtil {
                     }
                 }
 
-                final Uri contentUri = ContentUris
-                        .withAppendedId(Uri.parse("content://downloads/public_downloads"), Long.valueOf(id));
+                final Uri contentUri = ContentUris.withAppendedId(Uri.parse("content://downloads/public_downloads"), Long.valueOf(id));
 
                 path = getDataColumn(context, contentUri, null, null);
             } else if (isMediaDocument(uri)) {
@@ -279,9 +278,7 @@ public class FileUtil {
                 }
 
                 final String selection = "_id=?";
-                final String[] selectionArgs = new String[]{
-                        split[1]
-                };
+                final String[] selectionArgs = new String[]{split[1]};
 
                 path = getDataColumn(context, contentUri, selection, selectionArgs);
             }
@@ -293,8 +290,8 @@ public class FileUtil {
 
         if (path != null) {
             try {
-                return URLDecoder.decode(path, "UTF-8");
-            } catch(Exception e) {
+                return URLDecoder.decode(path, StandardCharsets.UTF_8);
+            } catch (Exception e) {
                 return null;
             }
         }
@@ -303,9 +300,7 @@ public class FileUtil {
 
     private static String getDataColumn(Context context, Uri uri, String selection, String[] selectionArgs) {
         final String column = MediaStore.Images.Media.DATA;
-        final String[] projection = {
-                column
-        };
+        final String[] projection = {column};
 
         try (Cursor cursor = context.getContentResolver().query(uri, projection, selection, selectionArgs, null)) {
             if (cursor != null && cursor.moveToFirst()) {
@@ -404,8 +399,7 @@ public class FileUtil {
     public static void resizeBitmapFileToCircle(String fromPath, String destPath) {
         if (!isExistFile(fromPath)) return;
         Bitmap src = BitmapFactory.decodeFile(fromPath);
-        Bitmap bitmap = Bitmap.createBitmap(src.getWidth(),
-                src.getHeight(), Bitmap.Config.ARGB_8888);
+        Bitmap bitmap = Bitmap.createBitmap(src.getWidth(), src.getHeight(), Bitmap.Config.ARGB_8888);
         Canvas canvas = new Canvas(bitmap);
 
         final int color = 0xff424242;
@@ -415,8 +409,7 @@ public class FileUtil {
         paint.setAntiAlias(true);
         canvas.drawARGB(0, 0, 0, 0);
         paint.setColor(color);
-        canvas.drawCircle(src.getWidth() / 2, src.getHeight() / 2,
-                src.getWidth() / 2, paint);
+        canvas.drawCircle(src.getWidth() / 2, src.getHeight() / 2, src.getWidth() / 2, paint);
         paint.setXfermode(new PorterDuffXfermode(PorterDuff.Mode.SRC_IN));
         canvas.drawBitmap(src, rect, rect, paint);
 
@@ -426,8 +419,7 @@ public class FileUtil {
     public static void resizeBitmapFileWithRoundedBorder(String fromPath, String destPath, int pixels) {
         if (!isExistFile(fromPath)) return;
         Bitmap src = BitmapFactory.decodeFile(fromPath);
-        Bitmap bitmap = Bitmap.createBitmap(src.getWidth(), src
-                .getHeight(), Bitmap.Config.ARGB_8888);
+        Bitmap bitmap = Bitmap.createBitmap(src.getWidth(), src.getHeight(), Bitmap.Config.ARGB_8888);
         Canvas canvas = new Canvas(bitmap);
 
         final int color = 0xff424242;
@@ -512,8 +504,7 @@ public class FileUtil {
     public static void setBitmapFileColorFilter(String fromPath, String destPath, int color) {
         if (!isExistFile(fromPath)) return;
         Bitmap src = BitmapFactory.decodeFile(fromPath);
-        Bitmap bitmap = Bitmap.createBitmap(src, 0, 0,
-                src.getWidth() - 1, src.getHeight() - 1);
+        Bitmap bitmap = Bitmap.createBitmap(src, 0, 0, src.getWidth() - 1, src.getHeight() - 1);
         Paint p = new Paint();
         ColorFilter filter = new LightingColorFilter(color, 1);
         p.setColorFilter(filter);
@@ -525,13 +516,7 @@ public class FileUtil {
     public static void setBitmapFileBrightness(String fromPath, String destPath, float brightness) {
         if (!isExistFile(fromPath)) return;
         Bitmap src = BitmapFactory.decodeFile(fromPath);
-        ColorMatrix cm = new ColorMatrix(new float[]
-                {
-                        1, 0, 0, 0, brightness,
-                        0, 1, 0, 0, brightness,
-                        0, 0, 1, 0, brightness,
-                        0, 0, 0, 1, 0
-                });
+        ColorMatrix cm = new ColorMatrix(new float[]{1, 0, 0, 0, brightness, 0, 1, 0, 0, brightness, 0, 0, 1, 0, brightness, 0, 0, 0, 1, 0});
 
         Bitmap bitmap = Bitmap.createBitmap(src.getWidth(), src.getHeight(), src.getConfig());
         Canvas canvas = new Canvas(bitmap);
@@ -544,13 +529,7 @@ public class FileUtil {
     public static void setBitmapFileContrast(String fromPath, String destPath, float contrast) {
         if (!isExistFile(fromPath)) return;
         Bitmap src = BitmapFactory.decodeFile(fromPath);
-        ColorMatrix cm = new ColorMatrix(new float[]
-                {
-                        contrast, 0, 0, 0, 0,
-                        0, contrast, 0, 0, 0,
-                        0, 0, contrast, 0, 0,
-                        0, 0, 0, 1, 0
-                });
+        ColorMatrix cm = new ColorMatrix(new float[]{contrast, 0, 0, 0, 0, 0, contrast, 0, 0, 0, 0, 0, contrast, 0, 0, 0, 0, 0, 1, 0});
 
         Bitmap bitmap = Bitmap.createBitmap(src.getWidth(), src.getHeight(), src.getConfig());
         Canvas canvas = new Canvas(bitmap);
